--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -67,9 +67,9 @@
     alphaTest.gbuffers_spidereyes=GREATER 0.0001
 
 #Link Programs to Options
-    program.world0/shadow.enabled=REALTIME_SHADOWS
-    program.world-1/shadow.enabled=REALTIME_SHADOWS
-    program.world1/shadow.enabled=REALTIME_SHADOWS
+#    program.world0/shadow.enabled=REALTIME_SHADOWS
+#    program.world-1/shadow.enabled=REALTIME_SHADOWS
+#    program.world1/shadow.enabled=REALTIME_SHADOWS
     program.world0/composite2.enabled=MOTION_BLURRING
     program.world-1/composite2.enabled=MOTION_BLURRING
     program.world1/composite2.enabled=MOTION_BLURRING
@@ -110,4 +110,6 @@
     uniform.float.frameTimeSmooth = smooth(5, frameTime, 5, 5)
     uniform.float.eyeBrightnessM = smooth(4, eyeBrightness.y / 240.0, 5, 5)
     uniform.float.rainFactor = smooth(1, rainStrength, 15, 15)
+# Custom Images
+image.voxelVolumeI = none red_unsigned r32ui unsigned true false 256 768 256
 #
