--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -111,5 +111,6 @@
     uniform.float.eyeBrightnessM = smooth(4, eyeBrightness.y / 240.0, 5, 5)
     uniform.float.rainFactor = smooth(1, rainStrength, 15, 15)
 # Custom Images
-image.voxelVolumeI = none red_unsigned r32ui unsigned true false 256 768 256
+iris.features.required=CUSTOM_IMAGES
+image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 256 768 256
 #
