move options to common.glsl

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -50,6 +50,7 @@
     vignette=false
     beacon.beam.depth=true
     rain.depth=false
+    shadow.culling=false
     #ifndef ENTITY_SHADOWS
         shadowEntities = false
         shadowBlockEntities = false
@@ -111,6 +112,14 @@
     uniform.float.eyeBrightnessM = smooth(4, eyeBrightness.y / 240.0, 5, 5)
     uniform.float.rainFactor = smooth(1, rainStrength, 15, 15)
 # Custom Images
-iris.features.required=CUSTOM_IMAGES
-image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 256 768 256
+    iris.features.required=CUSTOM_IMAGES
+    #if VX_VOL_SIZE == 0
+        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 96 384 96
+    #elif VX_VOL_SIZE == 1
+        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 128 576 128
+    #elif VX_VOL_SIZE == 2
+        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 256 768 256
+    #elif VX_VOL_SIZE == 3
+        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 512 768 512
+    #endif
 #
