functional block ID mapping

--- a/shaders/block_id_gen/old_block.properties
+++ b/shaders/block_id_gen/old_block.properties
@@ -16,27 +16,18 @@
 #---------------------------------------------------------------------------------------------------------------------
 
 block.10000=big_dripleaf_stem big_dripleaf small_dripleaf
-#if MC_VERSION >= 11300
 block.10004=grass fern oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling bamboo_sapling cherry_sapling dead_bush dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose sweet_berry_bush wheat carrots potatoes beetroots pumpkin_stem melon_stem nether_sprouts warped_roots crimson_roots sunflower:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower large_fern:half=lower torchflower_crop
-#else
-block.10004=tallgrass sapling deadbush yellow_flower red_flower wheat carrots potatoes beetroots pumpkin_stem melon_stem double_plant:half=lower
-#endif
 block.10008=leaves leaves2 oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves azalea_leaves flowering_azalea_leaves mangrove_leaves cherry_leaves
 block.10012=vine
 block.10016=reeds attached_pumpkin_stem attached_melon_stem mangrove_propagule seagrass tall_seagrass kelp_plant kelp hanging_roots sugar_cane spore_blossom pink_petals pitcher_plant
 block.10020=double_plant:half=upper sunflower:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper large_fern:half=upper
 block.10024=brewing_stand
 block.10028=hay_block
-block.10032=stonebrick stone_slab:variant=stone_brick monster_egg:variant=stone_brick monster_egg:variant=mossy_brick monster_egg:variant=cracked_brick monster_egg:variant=chiseled_brick stone_bricks mossy_stone_bricks cracked_stone_bricks chiseled_stone_bricks stone_brick_stairs mossy_stone_brick_wall stone_brick_wall mossy_stone_brick_stairs mossy_stone_brick_slab infested_chiseled_stone_bricks infested_cracked_stone_bricks infested_mossy_stone_bricks infested_stone_bricks stone_brick_slab
+block.10032=stonebrick stone_bricks mossy_stone_bricks cracked_stone_bricks chiseled_stone_bricks stone_brick_stairs mossy_stone_brick_wall stone_brick_wall mossy_stone_brick_stairs mossy_stone_brick_slab infested_chiseled_stone_bricks infested_cracked_stone_bricks infested_mossy_stone_bricks infested_stone_bricks stone_brick_slab
 block.10036=anvil chipped_anvil damaged_anvil
 block.10040=golden_rail powered_rail detector_rail rail activator_rail
-#if MC_VERSION >= 11300
 block.10044=cauldron hopper
 block.10048=water_cauldron
-#else
-block.10044=cauldron:level=0 hopper
-block.10048=cauldron:level=1 cauldron:level=2 cauldron:level=3
-#endif
 block.10052=powder_snow_cauldron
 block.10056=lava_cauldron
 block.10060=lever
@@ -44,47 +35,37 @@ block.10064=lectern
 block.10068=lava flowing_lava
 block.10072=fire
 block.10076=soul_fire
-#if MC_VERSION >= 11300
 block.10080=stone stone_slab infested_stone stone_stairs stone_pressure_plate stone_button coal_ore smooth_stone smooth_stone_slab grindstone stonecutter
-#else
-block.10080=stone:variant=stone stone_slab:variant=stone stone_pressure_plate monster_egg:variant=stone
-#endif
-block.10084=stone:variant=granite granite granite_wall granite_stairs granite_slab
-block.10088=stone:variant=diorite diorite diorite_wall diorite_stairs diorite_slab
-block.10092=stone:variant=andesite andesite andesite_wall andesite_stairs andesite_slab
-block.10096=stone:variant=smooth_granite polished_granite polished_granite_stairs polished_granite_slab
-block.10100=stone:variant=smooth_diorite polished_diorite polished_diorite_stairs polished_diorite_slab
-block.10104=stone:variant=smooth_andesite polished_andesite polished_andesite_stairs polished_andesite_slab packed_mud mud_bricks mud_brick_stairs mud_brick_slab mud_brick_wall bricks brick_slab brick_stairs brick_wall
+block.10084=granite granite_wall granite_stairs granite_slab
+block.10088=diorite diorite_wall diorite_stairs diorite_slab
+block.10092=andesite andesite_wall andesite_stairs andesite_slab
+block.10096=polished_granite polished_granite_stairs polished_granite_slab
+block.10100=polished_diorite polished_diorite_stairs polished_diorite_slab
+block.10104=polished_andesite polished_andesite_stairs polished_andesite_slab packed_mud mud_bricks mud_brick_stairs mud_brick_slab mud_brick_wall bricks brick_slab brick_stairs brick_wall
 block.10108=deepslate cobbled_deepslate infested_deepslate cobbled_deepslate_wall cobbled_deepslate_stairs cobbled_deepslate_slab deepslate_coal_ore
 block.10112=polished_deepslate deepslate_bricks cracked_deepslate_bricks deepslate_tiles cracked_deepslate_tiles chiseled_deepslate polished_deepslate_wall deepslate_brick_wall deepslate_tile_wall polished_deepslate_stairs deepslate_brick_stairs deepslate_tile_stairs polished_deepslate_slab deepslate_brick_slab deepslate_tile_slab mud muddy_mangrove_roots mangrove_roots
 block.10116=calcite
 block.10120=dripstone_block pointed_dripstone daylight_detector
-#if MC_VERSION >= 11300
 block.10124=grass_block:snowy=true podzol:snowy=true mycelium:snowy=true
 block.10128=dirt coarse_dirt rooted_dirt podzol:snowy=false mycelium:snowy=false dirt_path grass_path farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
 block.10132=grass_block:snowy=false
-#else
-block.10124=grass:snowy=true dirt:snowy=true mycelium:snowy=true
-block.10128=dirt:snowy=false cmycelium:snowy=false grass_path farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
-block.10132=grass:snowy=false
-#endif
 block.10136=farmland:moisture=7
 block.10140=netherrack
 block.10144=warped_nylium warped_wart_block
 block.10148=crimson_nylium nether_wart_block
-block.10152=cobblestone stone_slab:variant=cobblestone stone_stairs monster_egg:variant=cobblestone cobblestone_wall cobblestone_slab mossy_cobblestone cobblestone_stairs infested_cobblestone cobblestone_wall mossy_cobblestone_wall mossy_cobblestone_stairs mossy_cobblestone_slab moss_block moss_carpet furnace:lit=false smoker:lit=false blast_furnace:lit=false lodestone piston sticky_piston piston_head dispenser dropper
-block.10156=planks:variant=oak wooden_slab:variant=oak trapdoor fence fence_gate oak_planks stripped_oak_log stripped_oak_wood oak_slab petrified_oak_slab oak_fence oak_stairs oak_button oak_pressure_plate oak_trapdoor oak_fence_gate bookshelf crafting_table tripwire_hook
-block.10160=log:variant=oak oak_log oak_wood
-block.10164=planks:variant=spruce wooden_slab:variant=spruce spruce_planks stripped_spruce_log stripped_spruce_wood spruce_slab spruce_fence spruce_stairs spruce_button spruce_pressure_plate spruce_trapdoor spruce_fence_gate
-block.10168=log:variant=spruce spruce_log spruce_wood
-block.10172=planks:variant=birch wooden_slab:variant=birch birch_planks stripped_birch_log stripped_birch_wood birch_slab birch_fence birch_stairs birch_button birch_pressure_plate birch_trapdoor birch_fence_gate loom chiseled_bookshelf
-block.10176=log:variant=birch birch_log birch_wood
-block.10180=planks:variant=jungle wooden_slab:variant=jungle jungle_planks stripped_jungle_log stripped_jungle_wood jungle_slab jungle_fence jungle_stairs jungle_button jungle_pressure_plate jungle_trapdoor jungle_fence_gate composter
-block.10184=log:variant=jungle jungle_log jungle_wood
-block.10188=planks:variant=acacia wooden_slab:variant=acacia acacia_planks stripped_acacia_log stripped_acacia_wood acacia_slab acacia_fence acacia_stairs acacia_button acacia_pressure_plate acacia_trapdoor acacia_fence_gate
-block.10192=log2:variant=acacia acacia_log acacia_wood
-block.10196=planks:variant=dark_oak wooden_slab:variant=dark_oak dark_oak_planks stripped_dark_oak_log stripped_dark_oak_wood dark_oak_slab dark_oak_fence dark_oak_stairs dark_oak_button dark_oak_pressure_plate dark_oak_trapdoor dark_oak_fence_gate
-block.10200=log2:variant=dark_oak dark_oak_log dark_oak_wood
+block.10152=cobblestone stone_stairs cobblestone_wall cobblestone_slab mossy_cobblestone cobblestone_stairs infested_cobblestone cobblestone_wall mossy_cobblestone_wall mossy_cobblestone_stairs mossy_cobblestone_slab moss_block moss_carpet furnace:lit=false smoker:lit=false blast_furnace:lit=false lodestone piston sticky_piston piston_head dispenser dropper
+block.10156=trapdoor fence fence_gate oak_planks stripped_oak_log stripped_oak_wood oak_slab petrified_oak_slab oak_fence oak_stairs oak_button oak_pressure_plate oak_trapdoor oak_fence_gate bookshelf crafting_table tripwire_hook
+block.10160=oak_log oak_wood
+block.10164=spruce_planks stripped_spruce_log stripped_spruce_wood spruce_slab spruce_fence spruce_stairs spruce_button spruce_pressure_plate spruce_trapdoor spruce_fence_gate
+block.10168=spruce_log spruce_wood
+block.10172=birch_planks stripped_birch_log stripped_birch_wood birch_slab birch_fence birch_stairs birch_button birch_pressure_plate birch_trapdoor birch_fence_gate loom chiseled_bookshelf
+block.10176=birch_log birch_wood
+block.10180=jungle_planks stripped_jungle_log stripped_jungle_wood jungle_slab jungle_fence jungle_stairs jungle_button jungle_pressure_plate jungle_trapdoor jungle_fence_gate composter
+block.10184=jungle_log jungle_wood
+block.10188=acacia_planks stripped_acacia_log stripped_acacia_wood acacia_slab acacia_fence acacia_stairs acacia_button acacia_pressure_plate acacia_trapdoor acacia_fence_gate
+block.10192=log2 acacia_log acacia_wood
+block.10196=dark_oak_planks stripped_dark_oak_log stripped_dark_oak_wood dark_oak_slab dark_oak_fence dark_oak_stairs dark_oak_button dark_oak_pressure_plate dark_oak_trapdoor dark_oak_fence_gate
+block.10200=log2 dark_oak_log dark_oak_wood
 block.10204=mangrove_planks stripped_mangrove_log stripped_mangrove_wood mangrove_slab mangrove_fence mangrove_stairs mangrove_button mangrove_pressure_plate mangrove_trapdoor mangrove_fence_gate
 block.10208=mangrove_log mangrove_wood
 block.10212=crimson_planks stripped_crimson_stem stripped_crimson_hyphae crimson_slab crimson_fence crimson_stairs crimson_button crimson_pressure_plate crimson_trapdoor crimson_fence_gate
@@ -92,14 +73,14 @@ block.10216=crimson_stem crimson_hyphae
 block.10220=warped_planks stripped_warped_stem stripped_warped_hyphae warped_slab warped_fence warped_stairs warped_button warped_pressure_plate warped_trapdoor warped_fence_gate
 block.10224=warped_stem warped_hyphae
 block.10228=bedrock
-#if MC_VERSION >= 11300
+#if MC_VERSION >=11300
 block.10232=sand suspicious_sand
 block.10236=red_sand
 #else
-block.10232=sand:variant=sand
-block.10236=sand:variant=red_sand
+block.10232=
+block.10236=
 #endif
-block.10240=stone_slab:variant=sandstone sandstone chiseled_sandstone cut_sandstone sandstone_slab cut_sandstone_slab smooth_sandstone sandstone_stairs sandstone_wall smooth_sandstone_stairs smooth_sandstone_slab
+block.10240=sandstone chiseled_sandstone cut_sandstone sandstone_slab cut_sandstone_slab smooth_sandstone sandstone_stairs sandstone_wall smooth_sandstone_stairs smooth_sandstone_slab
 block.10244=stone_slab2 red_sandstone red_sandstone_slab cut_red_sandstone_slab smooth_red_sandstone red_sandstone_wall chiseled_red_sandstone cut_red_sandstone red_sandstone_stairs smooth_red_sandstone_stairs smooth_red_sandstone_slab
 block.10248=netherite_block
 block.10252=ancient_debris
@@ -130,7 +111,7 @@ block.10348=azalea flowering_azalea
 block.10352=lapis_block
 block.10356=lapis_ore
 block.10360=deepslate_lapis_ore
-block.10364=stone_slab:variant=quartz quartz_block chiseled_quartz_block smooth_quartz quartz_slab quartz_bricks quartz_pillar quartz_stairs smooth_quartz_stairs smooth_quartz_slab
+block.10364=quartz_block chiseled_quartz_block smooth_quartz quartz_slab quartz_bricks quartz_pillar quartz_stairs smooth_quartz_stairs smooth_quartz_slab
 block.10368=quartz_ore nether_quartz_ore
 block.10372=obsidian
 block.10376=purpur_block purpur_pillar purpur_stairs purpur_slab
@@ -143,7 +124,7 @@ block.10400=sea_pickle
 block.10404=soul_sand soul_soil
 block.10408=basalt polished_basalt smooth_basalt
 block.10412=glowstone
-block.10416=nether_brick stone_slab:variant=nether_brick nether_bricks nether_brick_slab cracked_nether_bricks chiseled_nether_bricks nether_brick_fence nether_brick_stairs nether_brick_wall
+block.10416=nether_brick nether_bricks nether_brick_slab cracked_nether_bricks chiseled_nether_bricks nether_brick_fence nether_brick_stairs nether_brick_wall
 block.10420=red_nether_bricks red_nether_brick_slab red_nether_brick_stairs red_nether_brick_wall
 block.10424=melon_block melon
 block.10428=end_stone end_bricks end_stone_bricks end_stone_brick_wall end_stone_brick_stairs end_stone_brick_slab
@@ -172,15 +153,9 @@ block.10516=lit_furnace furnace:lit=true
 block.10520=cactus
 block.10524=noteblock note_block jukebox
 block.10528=soul_torch soul_wall_torch
-#if MC_VERSION >= 11300
 block.10532=brown_mushroom_block
 block.10536=red_mushroom_block
 block.10540=mushroom_stem
-#else
-block.10532=
-block.10536=
-block.10540=
-#endif
 block.10544=glow_lichen
 block.10548=enchanting_table
 block.10552=end_portal_frame:eye=false
@@ -198,24 +173,16 @@ block.10596=redstone_wire:power=1 redstone_wire:power=2 redstone_wire:power=3 re
 block.10600=redstone_wire:power=0
 block.10604=redstone_torch redstone_wall_torch
 block.10608=redstone_block
-#if MC_VERSION >= 11300
 block.10612=redstone_ore:lit=false
 block.10616=redstone_ore:lit=true
-#else
 block.10612=redstone_ore
 block.10616=lit_redstone_ore
-#endif
 block.10620=deepslate_redstone_ore:lit=false
 block.10624=deepslate_redstone_ore:lit=true
 block.10628=cave_vines_plant:berries=false cave_vines:berries=false
 block.10632=cave_vines_plant:berries=true cave_vines:berries=true
-#if MC_VERSION >= 11300
 block.10636=redstone_lamp:lit=false
 block.10640=redstone_lamp:lit=true
-#else
-block.10636=redstone_lamp
-block.10640=lit_redstone_lamp
-#endif
 block.10644=powered_repeater unpowered_repeater powered_comparator unpowered_comparator repeater comparator
 block.10648=shroomlight
 block.10652=campfire:lit=true
