--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -91,6 +91,9 @@
         texture.gbuffers.gaux4=lib/textures/clouds.png
     #endif
 
+#Block ID map
+    texture.setup.colortex3=lib/textures/blockIdMap.png
+
 #Custom Uniforms
     uniform.float.framemod8 = frameCounter % 8
     uniform.float.isEyeInCave = if(isEyeInWater == 0, 1.0 - smooth(202, if(eyeAltitude < 5.0, eyeBrightness.y / 240.0, 1.0), 6, 12), 0.0)
@@ -111,8 +114,9 @@
     uniform.float.frameTimeSmooth = smooth(5, frameTime, 5, 5)
     uniform.float.eyeBrightnessM = smooth(4, eyeBrightness.y / 240.0, 5, 5)
     uniform.float.rainFactor = smooth(1, rainStrength, 15, 15)
+
+    iris.features.required=CUSTOM_IMAGES SSBO
 # Custom Images
-    iris.features.required=CUSTOM_IMAGES
     #if VX_VOL_SIZE == 0
         image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 96 384 96
     #elif VX_VOL_SIZE == 1
@@ -122,4 +126,6 @@
     #elif VX_VOL_SIZE == 3
         image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 512 768 512
     #endif
+# SSBOs
+    bufferObject.0=131072
 #
