working sub-block voxel tracing

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -118,31 +118,28 @@
     iris.features.required=CUSTOM_IMAGES SSBO
 # Custom Images
     #if VX_VOL_SIZE == 0
-        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 96 64 96
+        image.voxelVolumeI = none RED_INTEGER R32I INT true false 96 64 96
     #elif VX_VOL_SIZE == 1
-        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 128 96 128
+        image.voxelVolumeI = none RED_INTEGER R32I INT true false 128 96 128
     #elif VX_VOL_SIZE == 2
-        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 256 128 256
+        image.voxelVolumeI = none RED_INTEGER R32I INT true false 256 128 256
     #elif VX_VOL_SIZE == 3
-        image.voxelVolumeI = none RED_INTEGER R32UI UNSIGNED_INT true false 512 128 512
+        image.voxelVolumeI = none RED_INTEGER R32I INT true false 512 128 512
     #endif
 # SSBOs
-    # Material map
+    # Material map and location assignment to block IDs
     bufferObject.0=524292
     # per-blockID geometry storage
-    #if VOXEL_DETAIL_AMOUNT == 0
+    #if VOXEL_DETAIL_AMOUNT == 1
         bufferObject.1=65536
-    #elif VOXEL_DETAIL_AMOUNT == 1
-        bufferObject.1=589824
     #elif VOXEL_DETAIL_AMOUNT == 2
-        bufferObject.1=4784128
+        bufferObject.1=589824
     #elif VOXEL_DETAIL_AMOUNT == 3
-        bufferObject.1=38338560
+        bufferObject.1=4784128
     #elif VOXEL_DETAIL_AMOUNT == 4
-        bufferObject.1=306774016
+        bufferObject.1=38338560
     #elif VOXEL_DETAIL_AMOUNT == 5
-        bufferObject.1=2454257664
+        bufferObject.1=306774016
     #elif VOXEL_DETAIL_AMOUNT == 6
-        bufferObject.1=19634126848
+        bufferObject.1=2454257664
     #endif
-#
