--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -50,7 +50,7 @@
     vignette=false
     beacon.beam.depth=true
     rain.depth=false
-    shadow.culling=false
+    shadow.culling=reverse
     #ifndef ENTITY_SHADOWS
         shadowEntities = false
         shadowBlockEntities = false
