emissive brightness (wonky) + blockID fixes

--- a/shaders/block_id_gen/old_block.properties
+++ b/shaders/block_id_gen/old_block.properties
@@ -171,7 +171,8 @@ block.10588=respawn_anchor:charges=0
 block.10592=respawn_anchor:charges=1 respawn_anchor:charges=2 respawn_anchor:charges=3 respawn_anchor:charges=4
 block.10596=redstone_wire:power=1 redstone_wire:power=2 redstone_wire:power=3 redstone_wire:power=4 redstone_wire:power=5 redstone_wire:power=6 redstone_wire:power=7 redstone_wire:power=8 redstone_wire:power=9 redstone_wire:power=10 redstone_wire:power=11 redstone_wire:power=12 redstone_wire:power=13 redstone_wire:power=14 redstone_wire:power=15
 block.10600=redstone_wire:power=0
-block.10604=redstone_torch redstone_wall_torch
+block.10604=redstone_torch:lit=true redstone_wall_torch:lit=true
+block.12604=redstone_torch:lit=false redstone_wall_torch:lit=false
 block.10608=redstone_block
 block.10612=redstone_ore:lit=false
 block.10616=redstone_ore:lit=true
