post-merge fixes

--- a/shaders/block_id_gen/old_block.properties
+++ b/shaders/block_id_gen/old_block.properties
@@ -1,18 +1,18 @@
 #---------------------------------------------------------------------------------------------------------------------
-# Some simple utility IDs:
+# Hello! Welcome to the Complementary block library. Shaders use these IDs to perform block specific effects.
+# If you want to add modded blocks, please feel free to put your block IDs in the following sections:
 #
-# 1 - Terrain
+# Leaves: block.10008
+# Foliage: block.10004 (if you are on Minecraft 1.13 and above, use the first 10004. Otherwise use the second 10004)
+# Ores (Modded): block.10024 (shader will do its best to detect ore-pixels if "Enable Glowing Ores" setting is on)
 #
-# 3 - Translucent
 #
-# 4 - Items
-# See item.properties
-#
-# 5 - Entities
-# See entity.properties
-#
-# 6 - Block Entities
-#
+# Unrelated info:
+# 1XXXX - Terrain
+# 3XXXX - Translucent
+# 4XXXX - Items (item.properties)
+# 5XXXX - Entities (entity.properties)
+# 6XXXX - Block Entities
 #---------------------------------------------------------------------------------------------------------------------
 
 block.10000=big_dripleaf_stem big_dripleaf small_dripleaf
@@ -21,7 +21,7 @@ block.10008=leaves leaves2 oak_leaves spruce_leaves birch_leaves jungle_leaves a
 block.10012=vine
 block.10016=reeds attached_pumpkin_stem attached_melon_stem mangrove_propagule seagrass tall_seagrass kelp_plant kelp hanging_roots sugar_cane spore_blossom pink_petals pitcher_plant
 block.10020=double_plant:half=upper sunflower:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper large_fern:half=upper
-block.10024=brewing_stand
+block.10024=
 block.10028=hay_block
 block.10032=stonebrick stone_bricks mossy_stone_bricks cracked_stone_bricks chiseled_stone_bricks stone_brick_stairs mossy_stone_brick_wall stone_brick_wall mossy_stone_brick_stairs mossy_stone_brick_slab infested_chiseled_stone_bricks infested_cracked_stone_bricks infested_mossy_stone_bricks infested_stone_bricks stone_brick_slab
 block.10036=anvil chipped_anvil damaged_anvil
@@ -47,7 +47,7 @@ block.10112=polished_deepslate deepslate_bricks cracked_deepslate_bricks deepsla
 block.10116=calcite
 block.10120=dripstone_block pointed_dripstone daylight_detector
 block.10124=grass_block:snowy=true podzol:snowy=true mycelium:snowy=true
-block.10128=dirt coarse_dirt rooted_dirt podzol:snowy=false mycelium:snowy=false dirt_path grass_path farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
+block.10128=dirt coarse_dirt rooted_dirt podzol:snowy=false mycelium:snowy=false farmland:moisture=0 farmland:moisture=1 farmland:moisture=2 farmland:moisture=3 farmland:moisture=4 farmland:moisture=5 farmland:moisture=6
 block.10132=grass_block:snowy=false
 block.10136=farmland:moisture=7
 block.10140=netherrack
@@ -135,7 +135,7 @@ block.10444=dark_prismarine dark_prismarine_stairs dark_prismarine_slab
 block.10448=sea_lantern
 block.10452=magma magma_block
 block.10456=command_block chain_command_block repeating_command_block
-block.10460=concrete white_concrete orange_concrete magenta_concrete light_blue_concrete yellow_concrete lime_concrete pink_concrete gray_concrete light_gray_concrete cyan_concrete purple_concrete blue_concrete brown_concrete green_concrete red_concrete black_concrete
+block.10460=concrete white_concrete orange_concrete magenta_concrete light_blue_concrete yellow_concrete pink_concrete gray_concrete light_gray_concrete cyan_concrete purple_concrete blue_concrete brown_concrete green_concrete red_concrete black_concrete
 block.10464=concrete_powder white_concrete_powder orange_concrete_powder magenta_concrete_powder light_blue_concrete_powder yellow_concrete_powder lime_concrete_powder pink_concrete_powder gray_concrete_powder light_gray_concrete_powder cyan_concrete_powder purple_concrete_powder blue_concrete_powder brown_concrete_powder green_concrete_powder red_concrete_powder black_concrete_powder
 block.10468=tube_coral_block brain_coral_block bubble_coral_block fire_coral_block horn_coral_block dead_tube_coral_block dead_brain_coral_block dead_bubble_coral_block dead_fire_coral_block dead_horn_coral_block
 block.10472=tube_coral brain_coral bubble_coral fire_coral horn_coral tube_coral_fan brain_coral_fan bubble_coral_fan fire_coral_fan horn_coral_fan dead_tube_coral dead_brain_coral dead_bubble_coral dead_fire_coral dead_horn_coral dead_tube_coral_fan dead_brain_coral_fan dead_bubble_coral_fan dead_fire_coral_fan dead_horn_coral_fan tube_coral_wall_fan brain_coral_wall_fan bubble_coral_wall_fan fire_coral_wall_fan horn_coral_wall_fan dead_tube_coral_wall_fan dead_brain_coral_wall_fan dead_bubble_coral_wall_fan dead_fire_coral_wall_fan dead_horn_coral_wall_fan
@@ -143,7 +143,7 @@ block.10476=crying_obsidian
 block.10480=blackstone blackstone_slab blackstone_stairs polished_blackstone polished_blackstone_slab polished_blackstone_stairs chiseled_polished_blackstone polished_blackstone_bricks polished_blackstone_brick_slab polished_blackstone_brick_stairs cracked_polished_blackstone_bricks polished_blackstone_pressure_plate polished_blackstone_button polished_blackstone_brick_wall polished_blackstone_wall blackstone_wall
 block.10484=gilded_blackstone
 block.10488=waterlily lily_pad
-block.10492=
+block.10492=dirt_path grass_path
 block.10496=torch wall_torch
 block.10500=end_rod
 block.10504=chorus_plant
@@ -190,7 +190,7 @@ block.10652=campfire:lit=true
 block.10656=soul_campfire:lit=true
 block.10660=campfire:lit=false soul_campfire:lit=false
 block.10664=observer
-block.10668=carpet wool white_carpet orange_carpet magenta_carpet light_blue_carpet yellow_carpet lime_carpet pink_carpet gray_carpet light_gray_carpet cyan_carpet purple_carpet blue_carpet brown_carpet green_carpet red_carpet black_carpet white_wool orange_wool magenta_wool light_blue_wool yellow_wool lime_wool pink_wool gray_wool light_gray_wool cyan_wool purple_wool blue_wool brown_wool green_wool red_wool black_wool
+block.10668=carpet wool white_carpet orange_carpet magenta_carpet light_blue_carpet yellow_carpet pink_carpet gray_carpet light_gray_carpet cyan_carpet purple_carpet blue_carpet brown_carpet green_carpet red_carpet black_carpet white_wool orange_wool magenta_wool light_blue_wool yellow_wool pink_wool gray_wool light_gray_wool cyan_wool purple_wool blue_wool brown_wool green_wool red_wool black_wool
 block.10672=bone_block
 block.10676=barrel beehive bee_nest honeycomb_block
 block.10680=ochre_froglight
@@ -232,6 +232,9 @@ block.10820=crimson_door
 block.10824=warped_door
 block.10828=bamboo_door
 block.10832=cherry_door
+block.10836=brewing_stand
+block.10840=lime_concrete
+block.10844=lime_carpet lime_wool
 
 block.30000=stained_glass white_stained_glass orange_stained_glass magenta_stained_glass light_blue_stained_glass yellow_stained_glass lime_stained_glass pink_stained_glass gray_stained_glass light_gray_stained_glass cyan_stained_glass purple_stained_glass blue_stained_glass brown_stained_glass green_stained_glass red_stained_glass black_stained_glass
 block.30004=stained_glass_pane white_stained_glass_pane orange_stained_glass_pane magenta_stained_glass_pane light_blue_stained_glass_pane yellow_stained_glass_pane lime_stained_glass_pane pink_stained_glass_pane gray_stained_glass_pane light_gray_stained_glass_pane cyan_stained_glass_pane purple_stained_glass_pane blue_stained_glass_pane brown_stained_glass_pane green_stained_glass_pane red_stained_glass_pane black_stained_glass_pane
@@ -246,12 +249,14 @@ block.31008=glass
 block.31012=glass_pane
 block.31016=beacon
 
-block.60000=end_portal end_gateway
+block.60000=
 block.60004=oak_sign spruce_sign birch_sign jungle_sign acacia_sign dark_oak_sign oak_wall_sign spruce_wall_sign birch_wall_sign jungle_wall_sign acacia_wall_sign dark_oak_wall_sign crimson_sign crimson_wall_sign warped_sign warped_wall_sign mangrove_sign mangrove_wall_sign bamboo_sign bamboo_wall_sign oak_hanging_sign spruce_hanging_sign birch_hanging_sign jungle_hanging_sign acacia_hanging_sign dark_oak_hanging_sign oak_wall_hanging_sign spruce_wall_hanging_sign birch_wall_hanging_sign jungle_wall_hanging_sign acacia_wall_hanging_sign dark_oak_wall_hanging_sign crimson_hanging_sign crimson_wall_hanging_sign warped_hanging_sign warped_wall_hanging_sign mangrove_hanging_sign mangrove_wall_hanging_sign bamboo_hanging_sign bamboo_wall_hanging_sign cherry_sign cherry_wall_sign cherry_hanging_sign cherry_wall_hanging_sign
 block.60008=chest trapped_chest
 block.60012=ender_chest
 block.60016=shulker_box white_shulker_box orange_shulker_box magenta_shulker_box light_blue_shulker_box yellow_shulker_box lime_shulker_box pink_shulker_box gray_shulker_box light_gray_shulker_box cyan_shulker_box purple_shulker_box blue_shulker_box brown_shulker_box green_shulker_box red_shulker_box black_shulker_box skeleton_skull wither_skeleton_skull player_head zombie_head creeper_head dragon_head white_banner orange_banner magenta_banner light_blue_banner yellow_banner lime_banner pink_banner gray_banner light_gray_banner cyan_banner purple_banner blue_banner brown_banner green_banner red_banner black_banner white_wall_banner orange_wall_banner magenta_wall_banner light_blue_wall_banner yellow_wall_banner lime_wall_banner pink_wall_banner gray_wall_banner light_gray_wall_banner cyan_wall_banner purple_wall_banner blue_wall_banner brown_wall_banner green_wall_banner red_wall_banner black_wall_banner white_bed orange_bed magenta_bed light_blue_bed yellow_bed lime_bed pink_bed gray_bed light_gray_bed cyan_bed purple_bed blue_bed brown_bed green_bed red_bed black_bed
 block.60020=conduit
-block.60024=
+block.60024=end_portal
+block.60028=end_gateway
+block.60032=bell
 
 layer.translucent=glass glass_pane beacon
