fix out of bounds texture read in voxelisation

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -128,7 +128,7 @@
     uniform.float.eyeBrightnessM = smooth(4, eyeBrightness.y / 240.0, 5, 5)
     uniform.float.rainFactor = smooth(1, rainStrength, 15, 15)
 
-    iris.features.required=CUSTOM_IMAGES SSBO
+    iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
 # Custom Images
     #if VX_VOL_SIZE == 0
         image.voxelVolumeI = none RED_INTEGER R32I INT true false 96 128 96
