--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -68,7 +68,7 @@
     vignette=false
     beacon.beam.depth=true
     rain.depth=false
-    shadow.culling=reversed
+    shadow.culling=reverse
     #ifndef ENTITY_SHADOWS
         shadowEntities = false
         shadowBlockEntities = false
