--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -110,17 +110,17 @@
     iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
 # Custom Images
     #if VX_VOL_SIZE == 0
-        image.voxelVolumeI = none RED_INTEGER R32I INT true false 96 192 96
-        image.irradianceCacheI = irradianceCache RGB RGB16F FLOAT true false 96 128 96
+        image.voxelVolumeI = none RED_INTEGER R32I INT false false 96 192 96
+        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 96 128 96
     #elif VX_VOL_SIZE == 1
-        image.voxelVolumeI = none RED_INTEGER R32I INT true false 128 288 128
-        image.irradianceCacheI = irradianceCache RGB RGB16F FLOAT true false 128 192 128
+        image.voxelVolumeI = none RED_INTEGER R32I INT false false 128 288 128
+        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 128 192 128
     #elif VX_VOL_SIZE == 2
-        image.voxelVolumeI = none RED_INTEGER R32I INT true false 256 384 256
-        image.irradianceCacheI = irradianceCache RGB RGB16F FLOAT true false 256 256 256
+        image.voxelVolumeI = none RED_INTEGER R32I INT false false 256 384 256
+        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 256 256 256
     #elif VX_VOL_SIZE == 3
-        image.voxelVolumeI = none RED_INTEGER R32I INT true false 512 384 512
-        image.irradianceCacheI = irradianceCache RGB RGB16F FLOAT true false 512 256 512
+        image.voxelVolumeI = none RED_INTEGER R32I INT false false 512 384 512
+        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 512 256 512
     #endif
 # SSBOs
     # Material map and location assignment to block IDs
