finish volumetric blocklight (for now)

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -54,7 +54,8 @@
     screen.OTHER_SETTINGS=<empty> <empty> [SELECT_OUTLINE_SETTINGS] [WORLD_OUTLINE_SETTINGS] HAND_SWAYING SHOW_LIGHT_LEVEL REDUCE_CLOSE_PARTICLES LESS_LAVA_FOG SNOWY_WORLD <empty> <empty> <empty> <empty> <empty> <empty> <empty> COLOR_CODED_PROGRAMS
         screen.SELECT_OUTLINE_SETTINGS=<empty> <empty> SELECT_OUTLINE <empty> SELECT_OUTLINE_I SELECT_OUTLINE_R SELECT_OUTLINE_G SELECT_OUTLINE_B
         screen.WORLD_OUTLINE_SETTINGS=<empty> <empty> WORLD_OUTLINE WORLD_OUTLINE_THICKNESS WORLD_OUTLINE_I <empty> <empty> <empty> DARK_OUTLINE DARK_OUTLINE_THICKNESS
-    screen.VX_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT LIGHT_TRACE_LENGTH TRACE_ALL_LIGHTS BLOCKLIGHT_I LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT <empty> <empty> <empty> [DENOISE_SETTINGS] [VX_WORLD]
+    screen.VX_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT LIGHT_TRACE_LENGTH TRACE_ALL_LIGHTS BLOCKLIGHT_I LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT <empty> <empty> <empty> [DENOISE_SETTINGS] [VX_WORLD] [VBL_SETTINGS]
+		screen.VBL_SETTINGS=<empty> <empty> VOLUMETRIC_BLOCKLIGHT VBL_STRENGTH VBL_NETHER_MULT VBL_END_MULT
         screen.DENOISE_SETTINGS=<empty> <empty> DENOISING_DEFINE ACCUMULATION <empty> <empty> DENOISE_MAX_BLUR RESET_ACCUMULATION_WITHOUT_LIGHTSOURCE DENOISE_MIN_BLUR <empty> DENOISE_CONVERGED_MULT
 		screen.VX_WORLD=<empty> <empty> CONWAY FRACTAL_GALAXY
 #Set Sliders
