--- a/shaders/block_id_gen/old_block.properties
+++ b/shaders/block_id_gen/old_block.properties
@@ -176,8 +176,6 @@ block.12604=redstone_torch:lit=false redstone_wall_torch:lit=false
 block.10608=redstone_block
 block.10612=redstone_ore:lit=false
 block.10616=redstone_ore:lit=true
-block.10612=redstone_ore
-block.10616=lit_redstone_ore
 block.10620=deepslate_redstone_ore:lit=false
 block.10624=deepslate_redstone_ore:lit=true
 block.10628=cave_vines_plant:berries=false cave_vines:berries=false
@@ -235,6 +233,7 @@ block.10832=cherry_door
 block.10836=brewing_stand
 block.10840=lime_concrete
 block.10844=lime_carpet lime_wool
+block.10996=light_block
 
 block.30000=stained_glass white_stained_glass orange_stained_glass magenta_stained_glass light_blue_stained_glass yellow_stained_glass lime_stained_glass pink_stained_glass gray_stained_glass light_gray_stained_glass cyan_stained_glass purple_stained_glass blue_stained_glass brown_stained_glass green_stained_glass red_stained_glass black_stained_glass
 block.30004=stained_glass_pane white_stained_glass_pane orange_stained_glass_pane magenta_stained_glass_pane light_blue_stained_glass_pane yellow_stained_glass_pane lime_stained_glass_pane pink_stained_glass_pane gray_stained_glass_pane light_gray_stained_glass_pane cyan_stained_glass_pane purple_stained_glass_pane blue_stained_glass_pane brown_stained_glass_pane green_stained_glass_pane red_stained_glass_pane black_stained_glass_pane
