profiles affect RV settings

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,11 +1,11 @@
 #Profiles
-    profile.POTATO   = !REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=64.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=1 BLOCK_REFLECT_QUALITY=0 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=0 CLOUD_QUALITY=1
-    profile.VERYLOW  = REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=64.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=1 BLOCK_REFLECT_QUALITY=0 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=0 CLOUD_QUALITY=1
-    profile.LOW      = REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=96.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=1 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2
-    profile.MEDIUM   = REALTIME_SHADOWS SHADOW_QUALITY=1 shadowDistance=128.0 !ENTITY_SHADOWS WATER_QUALITY=2 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=1 LIGHTSHAFT_QUALI_DEFINE=1 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2
-    profile.HIGH     = REALTIME_SHADOWS SHADOW_QUALITY=2 shadowDistance=192.0 !ENTITY_SHADOWS WATER_QUALITY=2 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=2 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2
-    profile.VERYHIGH = REALTIME_SHADOWS SHADOW_QUALITY=3 shadowDistance=224.0 !ENTITY_SHADOWS WATER_QUALITY=3 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=3 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=3 CLOUD_QUALITY=3
-    profile.ULTRA    = REALTIME_SHADOWS SHADOW_QUALITY=4 shadowDistance=256.0 ENTITY_SHADOWS WATER_QUALITY=3 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=4 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=3 CLOUD_QUALITY=3
+#    profile.POTATO   = !REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=64.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=1 BLOCK_REFLECT_QUALITY=0 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=0 CLOUD_QUALITY=1
+#    profile.VERYLOW  = REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=64.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=1 BLOCK_REFLECT_QUALITY=0 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=0 CLOUD_QUALITY=1
+    profile.LOW      = REALTIME_SHADOWS SHADOW_QUALITY=0 shadowDistance=64.0 !ENTITY_SHADOWS WATER_QUALITY=1 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=1 LIGHTSHAFT_QUALI_DEFINE=0 SSAO_QUALI_DEFINE=2 !FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2 VX_VOL_SIZE=0 VOXEL_DETAIL_AMOUNT=3 GI_STRENGTH=0 !TRACE_ALL_LIGHTS !PER_PIXEL_LIGHT !VOLUMETRIC_BLOCKLIGHT
+    profile.MEDIUM   = REALTIME_SHADOWS SHADOW_QUALITY=1 shadowDistance=96.0 !ENTITY_SHADOWS WATER_QUALITY=2 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=1 LIGHTSHAFT_QUALI_DEFINE=1 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2 VX_VOL_SIZE=0 VOXEL_DETAIL_AMOUNT=3 GI_STRENGTH=0 !TRACE_ALL_LIGHTS PER_PIXEL_LIGHT VOLUMETRIC_BLOCKLIGHT
+    profile.HIGH     = REALTIME_SHADOWS SHADOW_QUALITY=2 shadowDistance=128.0 ENTITY_SHADOWS WATER_QUALITY=2 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=2 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=2 CLOUD_QUALITY=2 VX_VOL_SIZE=1 VOXEL_DETAIL_AMOUNT=4 GI_STRENGTH=1 !TRACE_ALL_LIGHTS PER_PIXEL_LIGHT VOLUMETRIC_BLOCKLIGHT
+    profile.VERYHIGH = REALTIME_SHADOWS SHADOW_QUALITY=3 shadowDistance=224.0 ENTITY_SHADOWS WATER_QUALITY=3 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=3 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=3 CLOUD_QUALITY=3 VX_VOL_SIZE=1 VOXEL_DETAIL_AMOUNT=5 GI_STRENGTH=1 TRACE_ALL_LIGHTS PER_PIXEL_LIGHT VOLUMETRIC_BLOCKLIGHT
+    profile.ULTRA    = REALTIME_SHADOWS SHADOW_QUALITY=4 shadowDistance=256.0 ENTITY_SHADOWS WATER_QUALITY=3 WATER_REFLECT_QUALITY=2 BLOCK_REFLECT_QUALITY=3 LIGHTSHAFT_QUALI_DEFINE=4 SSAO_QUALI_DEFINE=2 FXAA DETAIL_QUALITY=3 CLOUD_QUALITY=3 VX_VOL_SIZE=2 VOXEL_DETAIL_AMOUNT=6 GI_STRENGTH=1 TRACE_ALL_LIGHTS PER_PIXEL_LIGHT VOLUMETRIC_BLOCKLIGHT
 
 #Screen Setup
     screen=<empty> <empty> [INFORMATION] SHADER_STYLE <profile> RP_MODE <empty> <empty> [PERFORMANCE_SETTINGS] [CAMERA_SETTINGS] [LIGHTING_SETTINGS] [ATMOSPHERE_SETTINGS] [MATERIAL_SETTINGS] [OTHER_SETTINGS] [VX_SETTINGS]
@@ -69,7 +69,7 @@
     vignette=false
     beacon.beam.depth=true
     rain.depth=false
-    #shadow.culling=reversed
+    shadow.culling=reversed
     #ifndef ENTITY_SHADOWS
         shadowEntities = false
         shadowBlockEntities = false
