make shadows great again

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -168,6 +168,8 @@
 		# this is slightly less than necessary, but it is fine if the material index doesn't go all the way to 16384
         bufferObject.1=2000000000
     #endif
+	# denoising data (only second moment for now)
+	bufferObject.2=8 true 1.0 1.0
 
 #Custom Uniforms
     uniform.float.framemod8 = frameCounter % 8
