--- a/shaders/entity.properties
+++ b/shaders/entity.properties
@@ -28,6 +28,7 @@ entity.50080=allay
 entity.50084=slime
 entity.50088=entity_flame
 entity.50092=trident
+entity.50116=tnt
 
 #else
 #1.12 And Below Mapping:
